fixed spacing issues in media query

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 body{
     box-sizing: border-box;
-    background: #33353a;
+    background: white;
 }
 
 #gameTitle{
@@ -8,11 +8,10 @@ body{
     font-size: 32px;
     display: flex;
     justify-content: center;
-    color: white;
+    color:#33353a;
 }
 
 #middlesection{
-    background: white;
     color: #33353a;
     display: flex;
     justify-content: space-around;
@@ -22,14 +21,12 @@ body{
 }
 
 #instructions{
-    background: white;
     color: #33353a;
 }
 
 #winsandlosses{
     font-family: 'Poppins', sans-serif;
     font-size: 28px;
-    background: white;
     color: #33353a;
     margin-right: 100px;
     padding-top: 46px;
@@ -46,7 +43,6 @@ body{
     font-size: 28px;
     display: flex;
     justify-content: space-around;
-    background: white;
     padding: 30px 0px;
     margin-left: 30px;
     margin-right: 30px;
@@ -55,14 +51,11 @@ body{
 
 p{
     font-family: 'Arial', sans-serif;
-    font-size: 16px;
-    margin-top: 20px;
+    font-size: 18px;
+    margin-top: 50px;
 }
 
 .crystals{
-    display: flex;
-    justify-content: space-around;
-    background: white;
     padding-bottom: 30px;
     margin-left: 30px;
     margin-right: 30px;
@@ -71,6 +64,26 @@ p{
 @media only screen and (max-width: 640px) {
     img{
         width: 75%;
+    }
+
+    [class*="col-xs-8"] {
+        width: 100%;
+    }
+
+    #counters{
+        font-size: 20px;
+        padding-top: 0;
+        margin-top: 10px;
+    }
+
+    #winsandlosses{
+        font-size: 20px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+
+    p{
+        margin-top: 20px;
     }
 }
 
